--- a/styles.css
+++ b/styles.css
@@ -24,32 +24,124 @@ body {
 
 #header-logo {
     font-size: 24px;
-    color: #F9FAF8
+    color: #F9FAF8;
+    font-weight: bold;
 }
 
 .header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-bottom: 60px;
 }
 
-/* .hero-text {
-    max-width: 100px;
-} */
+.hero {
+    display: flex;
+    flex: 1 1 0%;
 
+    /* justify-content: space-between; */
+    /* height: 80px; */
+    /* gap: 725px; */
+}
 
+.hero-text {
+    display: flex;
+    font-size: 48px;
+    text-align: left;
+    color: #F9FAF8;
+    flex: 1;
+    font-weight: bolder;
+}
 
+.hero-subtext {
+    max-width: 700px;
+    text-align: left;
+    color: #E5E7EB;
+    font-size: 17px;
+}
 
+ h1 {
+     margin-bottom: -15px;
+ }
+.image {
+    display: flex;
+    align-items: flex-end;
+}
 
+.button {
+    background-color: #3882F6;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    border: none;
+    padding: 10px;
+    padding-left: 35px;
+    padding-right: 35px;
+}
 
+.button-1 {
+    display: flex;
+    align-items: left;
+    border-radius: 8px;
+}
 
+/* SECTION 2 */
 
+.catalog-head {
+    font-size: 36px;
+    color: #1F2937;
+    padding: 10px;
+    margin-bottom: 25px;
+}
+.catalog {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+  }
 
+#section-2 {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    gap: 65px;
+    padding-bottom: 150px;
+}
 
+.text {
+    max-width: 200px;
+    font-size: 20px;
+    color: #1F2937
+}
 
+.imgs {
+    border: 5px solid #3882F6;
+    border-radius: 16px;
+}
 
+/* SECTION 3 */
 
+#section-3 {
+    display: flex;
+    padding: 200px;
+    flex-direction: column;
+}
 
+.quote-block {
+    display: flex;
+    align-items: center;
+    max-width: 900px;
+    text-align: center;
+    font-size: 36px;
+    font-style: italic;
+    color: lightslategray;
+}
+
+.author {
+    text-align: right;
+    justify-content: right;
+}
 
 
 
