--- a/styles.css
+++ b/styles.css
@@ -132,15 +132,22 @@ body {
     display: flex;
     align-items: center;
     max-width: 900px;
-    text-align: center;
+    text-align: left;
     font-size: 36px;
     font-style: italic;
     color: lightslategray;
+    padding-left: 200px;
 }
 
 .author {
     text-align: right;
     justify-content: right;
+    font-weight: bold;
+    padding-top: 15px;
+    font-size: 17px;
+    /* max-width: 300px; */
+    margin-left: auto;
+    margin-right: 400px;
 }
 
 
