--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,8 @@ body {
     background-color: #E5E7EB;
 }
 
+/* SECTION 1 */
+
 #header-logo {
     font-size: 24px;
     color: #F9FAF8;
@@ -38,10 +40,6 @@ body {
 .hero {
     display: flex;
     flex: 1 1 0%;
-
-    /* justify-content: space-between; */
-    /* height: 80px; */
-    /* gap: 725px; */
 }
 
 .hero-text {
@@ -135,7 +133,7 @@ body {
     font-size: 36px;
     font-style: italic;
     color: lightslategray;
-    padding-left: 200px;
+    padding-left: 325px;
 }
 
 .author {
@@ -145,7 +143,7 @@ body {
     padding-top: 25px;
     font-size: 17px;
     margin-left: auto;
-    margin-right: 400px;
+    margin-right: 250px;
 }
 
 /* SECTION 4 */
